Fix spacing between ranges, and within metadata

--- a/src/css/candlestick.less
+++ b/src/css/candlestick.less
@@ -6,7 +6,7 @@
 
   width: 100%;
   overflow: auto; //triggers correct clearance
-  padding: 4px 0;
+  padding: 4px 0 16px 0;
 
   .info {
     display: block;
